[package]
name = "tsp"
version = "0.3.0"
edition = "2024"
license = "MIT"
readme = "README.md"

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.143", default-features = false, features = ["std"] }

[build-dependencies]
serde = { version = "1.0.219", default-features = false, features = ["derive", "std"] }
toml = { version = "0.9.7", default-features = false, features = ["parse", "serde", "std"] }
